[gd_scene load_steps=5 format=2]

[ext_resource path="res://Hud/MenuButtons/ContainerTextMenuButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Hud/MenuButtons/ExitGame.gd" type="Script" id=2]
[ext_resource path="res://Hud/MenuButtons/door_tree_close.tres" type="Texture" id=3]
[ext_resource path="res://Hud/MenuButtons/door_tree_idle.tres" type="Texture" id=4]

[node name="ExitGame" type="TextureButton"]
margin_left = 180.0
margin_top = 23.7415
margin_right = 324.0
margin_bottom = 160.742
texture_normal = ExtResource( 4 )
texture_focused = ExtResource( 3 )
expand = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContainerText" parent="." instance=ExtResource( 1 )]
margin_left = -11.04
margin_top = 57.936
margin_right = 0.824
margin_bottom = -10.638

[connection signal="focus_entered" from="." to="." method="_on_ExitGame_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_ExitGame_focus_exited"]
